After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 705148 - latest release can't be build: error: redefinition of typedef 'GstVaapiDecoderMpeg4Class'
latest release can't be build: error: redefinition of typedef 'GstVaapiDecode...
Status: RESOLVED FIXED
Product: gstreamer-vaapi
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gstreamer-vaapi maintainer(s)
gstreamer-vaapi maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-07-30 13:47 UTC by Levente Farkas
Modified: 2013-08-26 10:58 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Levente Farkas 2013-07-30 13:47:55 UTC
because of this error:
------------------------------------------
  CC     libgstvaapi_0.10_la-gstvaapidecoder_mpeg4.lo
gstvaapidecoder_mpeg4.c:113: error: redefinition of typedef 'GstVaapiDecoderMpeg4Class'
gstvaapidecoder_mpeg4.c:44: note: previous declaration of 'GstVaapiDecoderMpeg4Class' was here
make[5]: *** [libgstvaapi_0.10_la-gstvaapidecoder_mpeg4.lo] Error 1
make[5]: Leaving directory `/builddir/build/BUILD/gstreamer-vaapi-0.5.5.1/gst-libs/gst/vaapi'
------------------------------------------
imho the first definition should have to be deleted in line 44.
Comment 1 Gwenole Beauchesne 2013-08-13 04:34:18 UTC
You are right, sorry for the inconvenience.
Comment 2 Gwenole Beauchesne 2013-08-26 09:32:46 UTC
Fixed in current git master branch. Thanks.
Comment 3 Gwenole Beauchesne 2013-08-26 10:58:16 UTC
commit d16db5896853345d65a3db8120de4663006079a3
Author: Gwenole Beauchesne <gwenole.beauchesne@intel.com>
Date:   Mon Aug 26 11:31:06 2013 +0200

    mpeg4: fix double definition of GstVaapiDecoderMpeg4Class.
    
    This fixes the following issue:
    
      CC     libgstvaapi_0.10_la-gstvaapidecoder_mpeg4.lo
    gstvaapidecoder_mpeg4.c:113: error: redefinition of typedef
    'GstVaapiDecoderMpeg4Class'
    gstvaapidecoder_mpeg4.c:44: note: previous declaration of
    'GstVaapiDecoderMpeg4Class' was here
    make[5]: *** [libgstvaapi_0.10_la-gstvaapidecoder_mpeg4.lo] Error 1
    make[5]: Leaving directory
    `/builddir/build/BUILD/gstreamer-vaapi-0.5.5.1/gst-libs/gst/vaapi'
    
    https://bugzilla.gnome.org/show_bug.cgi?id=705148